<resources>
    <string name="app_name">SplitApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="textview">TextView</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="login_with_an_existing_account">Login with an existing account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_useractivity_list">Items</string>
    <string name="title_useractivity_detail">UserActivity Detail</string>
    <string name="create_new_activity">Create New Activity</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="title_activity_manage_bill">manage_bill</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="add_manage_profile">Add/Manage Profile</string>
    <string name="add_picture">Add Picture</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="miscellaneous_notes">Miscellaneous Notes</string>
    <string name="amount_owed">Amount Owed</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="activity_name">Activity Name</string>
    <string name="add_edit_new_bill">Add/Edit New Bill</string>
    <string name="activityitem_place_holder">ActivityItem Place Holder</string>
    <string name="bill_name">Bill Name</string>
    <string name="bill_price">Bill Price</string>
    <string name="bill_uploaded_by_user">bill uploaded by user</string>
    <string name="image_of_the_bill">image of the bill</string>
    <string name="view_receipt">View Receipt</string>
    <string name="new_item">New Item</string>
    <string name="view_profiles">View Profiles</string>
    <string name="total_price_0_00">Total Price: $0.00</string>
    <string name="add_picture_of_receipt">Add picture of Receipt</string>
    <string name="add_profile">Add Profile</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="split_by_1">Split by: 1</string>
    <string name="add_activity">Add activity</string>
    <string name="receipt">Receipt</string>
    <string name="image_of_receipt">image of receipt</string>
    <string name="add_existing_profile">Add Existing Profile</string>
    <string name="total_items_split">Total Items Split:</string>
    <string name="profile_name">Profile Name</string>
    <string name="profiles">Profiles</string>
    <string name="button_indicator">Button indicator</string>
</resources>