<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/checkMark"
        android:layout_width="27dp"
        android:layout_height="40dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:visibility="gone"
        app:srcCompat="@android:drawable/checkbox_on_background"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/amountOwed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="10dp"
        android:text="@string/amount_owed" />

    <TextView
        android:id="@+id/totalSplitProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/total_items_split" />
</RelativeLayout>